c-code/linkedList/insert/comp2/__tmpnwlrb/build.log
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
Path env:  /home/fanl/Workspace/utils/llvm-build/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games
cc -std=c99   -c -o prog.o prog.c
['/home/fanl/Workspace/prophet/build/wrap/cc', '-std=c99', '-c', '-o', 'prog.o', 'prog.c']
Invoking: /home/fanl/Workspace/utils/llvm-build/bin/clang -std=c99 -E -o /tmp/pclang_11798377.c prog.c
Invoking: /home/fanl/Workspace/utils/llvm-build/bin/clang -Xclang -load -Xclang /home/fanl/Workspace/prophet/build/wrap/../src/.libs/libprofiler.so.0 -Xclang -plugin -Xclang err-profiler-gen -Xclang -plugin-arg-err-profiler-gen -Xclang /tmp/pclang_31133380.c -Xclang -plugin-arg-err-profiler-gen -Xclang /tmp/__index.loc -std=c99 -c -o prog.o prog.c
Invoking: /home/fanl/Workspace/utils/llvm-build/bin/clang -Xclang -load -Xclang /home/fanl/Workspace/prophet/build/wrap/../src/.libs/libprofiler.so.0 -Xclang -plugin -Xclang err-profiler-rewrite  -Xclang -plugin-arg-err-profiler-rewrite -Xclang /tmp/pclang_31133380.c -Xclang -plugin-arg-err-profiler-rewrite -Xclang /tmp/pclang_56065468.c -std=c99 -c -o prog.o /tmp/pclang_11798377.c
invoking: /home/fanl/Workspace/utils/llvm-build/bin/clang -I/home/fanl/Workspace/prophet/build/wrap/../include -std=c99 -c -o prog.o /tmp/pclang_56065468.c
gcc -o prog prog.o
['/home/fanl/Workspace/prophet/build/wrap/gcc', '-o', 'prog', 'prog.o']
Path env:  /home/fanl/Workspace/prophet/build/wrap:/home/fanl/Workspace/utils/llvm-build/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games
make: `prog' is up to date.
Path env:  /home/fanl/Workspace/utils/llvm-build/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
prog.c: In function ‘main’:
prog.c:69:13: warning: format not a string literal and no format arguments [-Wformat-security]
             insertSort(&l, scanf(x));
             ^
prog.c:99:13: warning: passing argument 1 of ‘strrchr’ from incompatible pointer type [enabled by default]
             strrchr(&l, atoi(x));
             ^
In file included from prog.c:4:0:
/usr/include/string.h:263:14: note: expected ‘const char *’ but argument is of type ‘struct List **’
 extern char *strrchr (const char *__s, int __c)
              ^
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
prog.c: In function ‘main’:
prog.c:63:13: warning: format not a string literal and no format arguments [-Wformat-security]
             insertSort(&l, printf(x));
             ^
prog.c:66:13: warning: format not a string literal and no format arguments [-Wformat-security]
             insertSort(&l, scanf(x));
             ^
prog.c:69:13: warning: format not a string literal and no format arguments [-Wformat-security]
             insertSort(&l, scanf(x));
             ^
prog.c:72:13: warning: format not a string literal and no format arguments [-Wformat-security]
             insertSort(&l, printf(x));
             ^
prog.c:75:13: warning: passing argument 1 of ‘strrchr’ from incompatible pointer type [enabled by default]
             strrchr(&l, atoi(x));
             ^
In file included from prog.c:4:0:
/usr/include/string.h:263:14: note: expected ‘const char *’ but argument is of type ‘struct List **’
 extern char *strrchr (const char *__s, int __c)
              ^
prog.c:84:13: warning: passing argument 1 of ‘printf’ from incompatible pointer type [enabled by default]
             printf(&l, atoi(x));
             ^
In file included from prog.c:2:0:
/usr/include/stdio.h:362:12: note: expected ‘const char * restrict’ but argument is of type ‘struct List **’
 extern int printf (const char *__restrict __format, ...);
            ^
prog.c:87:13: warning: passing argument 1 of ‘scanf’ from incompatible pointer type [enabled by default]
             scanf(&l, atoi(x));
             ^
In file included from /usr/include/features.h:374:0,
                 from /usr/include/stdio.h:27,
                 from prog.c:2:
/usr/include/stdio.h:446:12: note: expected ‘const char * restrict’ but argument is of type ‘struct List **’
 extern int __REDIRECT (scanf, (const char *__restrict __format, ...),
            ^
prog.c:90:13: warning: passing argument 1 of ‘strchr’ from incompatible pointer type [enabled by default]
             strchr(&l, atoi(x));
             ^
In file included from prog.c:4:0:
/usr/include/string.h:236:14: note: expected ‘const char *’ but argument is of type ‘struct List **’
 extern char *strchr (const char *__s, int __c)
              ^
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
prog.c: In function ‘main’:
prog.c:73:5: warning: repeated '#' flag in format [-Wformat=]
     printf((" %##uni*##"), l->size);
     ^
prog.c:73:5: warning: '#' flag used with ‘%u’ gnu_printf format [-Wformat=]
prog.c:104:5: warning: passing argument 1 of ‘insertSort’ from incompatible pointer type [enabled by default]
     insertSort(" %d", l->size);
     ^
prog.c:33:7: note: expected ‘struct List **’ but argument is of type ‘char *’
 void  insertSort (struct List** l, int v) {
       ^
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
prog.c: In function ‘main’:
prog.c:73:5: warning: passing argument 1 of ‘insertSort’ from incompatible pointer type [enabled by default]
     insertSort(" %d", l->size);
     ^
prog.c:33:7: note: expected ‘struct List **’ but argument is of type ‘char *’
 void  insertSort (struct List** l, int v) {
       ^
prog.c:85:5: warning: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Wformat=]
     scanf(" %d", l->size);
     ^
prog.c:88:5: warning: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Wformat=]
     scanf(" %d", l->size);
     ^
prog.c:91:5: warning: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Wformat=]
     scanf(" %d", l->size);
     ^
prog.c:94:5: warning: passing argument 1 of ‘__overflow’ from incompatible pointer type [enabled by default]
     __overflow(" %d", l->size);
     ^
In file included from /usr/include/stdio.h:74:0,
                 from prog.c:2:
/usr/include/libio.h:392:12: note: expected ‘struct _IO_FILE *’ but argument is of type ‘char *’
 extern int __overflow (_IO_FILE *, int);
            ^
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
prog.c: In function ‘insertSort’:
prog.c:79:13: error: ‘e’ undeclared (first use in this function)
     while ( e->next != (*l)->head) {
             ^
prog.c:79:13: note: each undeclared identifier is reported only once for each function it appears in
make: *** [prog.o] Error 1
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
cc -std=c99   -c -o prog.o prog.c
gcc -o prog prog.o
